[PIN-5476] Fixed table overflow

--- a/src/assets/scss/_helpers.scss
+++ b/src/assets/scss/_helpers.scss
@@ -23,6 +23,10 @@
 	overflow: visible;
 }
 
+.has-min-height {
+	min-height: 420px;
+}
+
 .radio-pictogram {
 	max-width: 40px;
 }
